[gd_scene load_steps=10 format=3 uid="uid://dkthcgwxdugov"]

[ext_resource type="Script" path="res://maps/base/map.gd" id="1_6sj80"]
[ext_resource type="Script" path="res://maps/base/navmesh.tres.gd" id="1_a56uy"]
[ext_resource type="PackedScene" uid="uid://bxdb0ix3c5ajr" path="res://objects/obstruction_object.tscn" id="3_3rpi2"]
[ext_resource type="PackedScene" uid="uid://jrqogsnwupmq" path="res://entities/pc/mech/entity_pc_mech.tscn" id="4_rtuwe"]
[ext_resource type="PackedScene" uid="uid://j4ntnwakuwmf" path="res://objects/condition/go_to_condition.tscn" id="5_2utp0"]
[ext_resource type="Script" path="res://maps/base/data_collector.tres.gd" id="6_6sn4j"]
[ext_resource type="PackedScene" uid="uid://djytndftcavnt" path="res://api/game_api.tscn" id="6_f40ue"]
[ext_resource type="Texture2D" uid="uid://djjoly7svrc7i" path="res://assets/map/env-pavement.png" id="10_g30b2"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_bhxb0"]
vertices = PackedVector2Array(896.416, -20.9652, 1141, -23, 1140, 188, 620.383, 623, 346, 622, 151.909, 623, -16, 623, -15.6989, 525.571, -14, 372, 249, -23, 396, -23, 539, -22, -14.4529, 122.528, -14, -24, 166.037, -23.3489, 1138.38, 539.708, 1138, 623, 569, 623)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7, 8, 9, 10, 11), PackedInt32Array(12, 13, 14, 9, 8), PackedInt32Array(15, 16, 3), PackedInt32Array(2, 15, 3), PackedInt32Array(11, 0, 3, 17, 4)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-14, -24, 166.037, -23.3489, 249, -23, 396, -23, 539, -22, 896.416, -20.9652, 1141, -23, 1140, 188, 1138.38, 539.708, 1138, 623, 620.383, 623, 569, 623, 346, 622, 151.909, 623, -16, 623, -15.6989, 525.571, -14, 372, -14.4529, 122.528)])
cell_size = 24.0

[node name="Map_01" type="Node2D"]
script = ExtResource("1_6sj80")
maximum_completion_time = 20

[node name="NavMesh" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(13, 24)
navigation_polygon = SubResource("NavigationPolygon_bhxb0")
enter_cost = 1.0
script = ExtResource("1_a56uy")

[node name="ObstructionObject" parent="NavMesh" instance=ExtResource("3_3rpi2")]
z_index = 2
position = Vector2(330, 183)
rotation = 1.57079
disable_mode = 2

[node name="ObstructionObject2" parent="NavMesh" instance=ExtResource("3_3rpi2")]
z_index = 2
position = Vector2(803, 189)
rotation = -1.5708
disable_mode = 2

[node name="EntityPcMech" parent="NavMesh" instance=ExtResource("4_rtuwe")]
position = Vector2(547, 550)
rotation = -1.59129

[node name="GoToCondition" parent="NavMesh" instance=ExtResource("5_2utp0")]
z_index = 2
position = Vector2(558, 181)

[node name="GameApi" parent="." instance=ExtResource("6_f40ue")]

[node name="LogicTimer" type="Timer" parent="."]

[node name="DataCollector" type="Node" parent="."]
script = ExtResource("6_6sn4j")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1150.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_g30b2")
stretch_mode = 1

[connection signal="mouse_click_movement" from="." to="NavMesh/EntityPcMech" method="_on_map_01_mouse_click_movement"]
[connection signal="mouse_click_shoot" from="." to="NavMesh/EntityPcMech" method="_on_map_01_mouse_click_shoot"]
[connection signal="plot_path" from="." to="NavMesh/EntityPcMech" method="_on_map_01_plot_path"]
[connection signal="space_damage" from="." to="NavMesh/EntityPcMech" method="_on_map_01_space_damage"]
[connection signal="child_entered_tree" from="NavMesh" to="." method="_on_nav_mesh_child_entered_tree"]
[connection signal="ready" from="NavMesh" to="." method="_on_nav_mesh_ready"]
[connection signal="goto_condition_met" from="NavMesh/GoToCondition" to="." method="_on_go_to_condition_goto_condition_met"]
[connection signal="timeout" from="LogicTimer" to="." method="_on_logic_timer_timeout"]
[connection signal="timeout" from="LogicTimer" to="GameApi" method="_on_logic_timer_timeout"]
[connection signal="ai_all_entities_destroyed" from="DataCollector" to="." method="_on_ai_data_collector_ai_all_entities_destroyed"]
[connection signal="pc_all_entities_destroyed" from="DataCollector" to="." method="_on_ai_data_collector_pc_all_entities_destroyed"]
